# MersenneNumbers

./: CMakeLists.txt  functions.cpp  functions.h  main.cpp
headers/: divisors.h  help.h  numbers.h  test.h
source/: divisors.cpp  help.cpp  numbers.cpp  test.cpp
